# qugar

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeCommonPresets.json  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  LICENSE  README.md  ThirdPartyNotices.txt  api.html  api_cpp.html  api_python.html  conda_install.sh  contributing.html  demos.html  environment-dev.yml  genindex.html  index.html  objects.inv  qugar.mesh.rst  qugar.quad.rst  qugar.rst  script_installation_macos_linux.sh  searchindex.js  setup_with_conda.sh
0.0.4/: api_cpp.html  demos.html  genindex.html  index.html  installation.html  objects.inv  qugar.mesh.rst  qugar.reparam.rst  searchindex.js  styleguide_cpp.html
_modules/: index.html
_sources/: api_python.rst.txt  demos.rst.txt  index.rst.txt
cpp/: CMakeLists.txt  CMakeUserPresets.json.template
cpp/demo/: CMakeLists.txt
cpp/demo/demo_quad_sphere/: CMakeLists.txt  main.cpp
cpp/demo/demo_reparam_gyroid/: CMakeLists.txt  main.cpp
cpp/doc/: CMakeLists.txt  README_building.md  README_dependencies.md  conf.py  jupytext_process.py
cpp/include/qugar/: affine_transf.hpp  bbox.hpp  bezier_tp.hpp  bezier_tp_utils.hpp  bspline_bezier_tp.hpp  bspline_tp.hpp  cart_grid_tp.cpp  cart_grid_tp.hpp  concepts.hpp  cut_quadrature.hpp  domain_function.hpp  impl_funcs_lib.hpp  impl_funcs_lib_macros.hpp  impl_quadrature.hpp  impl_reparam.hpp  impl_reparam_bezier.hpp  impl_reparam_general.hpp  impl_reparam_mesh.hpp  impl_unfitted_domain.hpp  impl_utils.hpp  lagrange_tp_utils.hpp  monomials_tp.hpp  numbers.hpp  point.hpp  polynomial_tp.hpp  primitive_funcs_lib.hpp  quadrature.hpp  qugar.hpp  qugar_export.hpp  ref_system.hpp  reparam_mesh.hpp  tensor_index_tp.hpp  tolerance.hpp  tpms_lib.hpp  types.hpp  unfitted_domain.hpp  unfitted_domain_binary_part.hpp  unfitted_domain_kd_tree.hpp  utils.hpp  vector.hpp  (+1 more)
cpp/qugar/: CMakeLists.txt  affine_transf.cpp  bbox.cpp  bezier_tp.cpp  bezier_tp_utils.cpp  bezier_tp_utils_composition.cpp  bspline_bezier_tp.cpp  bspline_tp.cpp  cart_grid_tp.cpp  cut_quadrature.cpp  impl_funcs_lib.cpp  impl_quadrature.cpp  impl_reparam.cpp  impl_reparam_bezier.cpp  impl_reparam_general.cpp  impl_reparam_mesh.cpp  impl_unfitted_domain.cpp  impl_utils.cpp  lagrange_tp_utils.cpp  monomials_tp.cpp  point.cpp  polynomial_tp.cpp  primitive_funcs_lib.cpp  quadrature.cpp  quadrature_lib.cpp  qugar.cpp  ref_system.cpp  reparam_mesh.cpp  tensor_index_tp.cpp  tolerance.cpp  tpms_lib.cpp  unfitted_domain.cpp  unfitted_domain_binary_part.cpp  unfitted_domain_kd_tree.cpp
cpp/test/: CMakeLists.txt  bezier_test_utils.hpp  constexpr_tests.cpp  quadrature_test_utils.hpp  random_generator.hpp  reparam_test_utils.hpp  test_bbox_0.cpp  test_bspline.cpp  test_impl_bezier_tp_0.cpp  test_impl_bezier_tp_1.cpp  test_impl_bezier_tp_2.cpp  test_impl_bezier_tp_3.cpp  test_impl_bezier_tp_4.cpp  test_impl_bezier_tp_5.cpp  test_impl_bezier_tp_6.cpp  test_impl_domain_0.cpp  test_impl_general_quad_0.cpp  test_impl_general_quad_1.cpp  test_impl_general_quad_2.cpp  test_impl_general_quad_3.cpp  test_impl_general_quad_4.cpp  test_impl_general_quad_5.cpp  test_impl_general_reparam_0.cpp  test_impl_general_reparam_1.cpp  test_impl_general_reparam_2.cpp  test_impl_monomials_tp_0.cpp  test_impl_monomials_tp_1.cpp  test_impl_monomials_tp_2.cpp  test_impl_monomials_tp_3.cpp  test_impl_poly_quad_0.cpp  test_impl_poly_quad_1.cpp  test_impl_poly_quad_2.cpp  test_impl_poly_quad_3.cpp  test_impl_poly_quad_4.cpp  test_impl_poly_quad_5.cpp  test_impl_poly_quad_6.cpp  test_impl_poly_reparam_0.cpp  test_impl_poly_reparam_1.cpp
python/: CMakeLists.txt  CMakeUserPresets.json.template  README copy.md  build-requirements.txt  pyproject.toml
python/demo/: demo_div_thm.py  demo_div_thm_no_fenicsx.py  demo_elasticity_convergence.py  demo_impl_funcs.py  demo_no_fenicsx.py  demo_plot.py  demo_poisson.py  demo_poisson_convergence.py
python/demo/assets/: demo_elasticity.pvsm  demo_poisson.pvsm  poisson_demo.pvsm
python/doc/: README.md
python/doc/source/: api.rst  conf.py  demos.rst  index.rst  styleguide_cpp.rst
python/nanobind_wrappers/: common.cpp  cut_quad.cpp  impl_functions.cpp  quad.cpp  qugar.cpp  reparam.cpp  unf_domain.cpp  wrapper_utils.hpp
python/qugar/: __init__.py  unfitted_domain.py  utils.py
python/qugar/dolfinx/: __init__.py  _dolfinx_patches.py  _ffcx_patches.py  _kernel_body.py  boundary.py  codegeneration.py  compiler.py  custom_coefficients.py  custom_quad.py  custom_quad_utils.py  fe_table.py  fe_table_eval.py  forms.py  integral_data.py  jit.py  parsing_utils.py  petsc.py  quadrature_data.py  solver.py
python/qugar/dolfinx/_shim/: __init__.py  qugar_basix_shim.cpp
python/qugar/impl/: __init__.py  impl_function.py  impl_unfitted_domain.py
python/qugar/mesh/: __init__.py  mesh.py  mesh_facets.py  tp_index.py  tp_mesh.py  unfitted_cart_mesh.py  unfitted_domain.py  unfitted_domain_abc.py  utils.py
python/qugar/plot/: __init__.py  pyvista_tools.py
python/qugar/quad/: __init__.py  custom_quad.py  quad_data.py  quad_generator.py
python/qugar/reparam/: __init__.py  reparam.py
python/qugar/vtk/: __init__.py  vtk_tools.py
python/test/: conftest.py  mock_quad_generator.py  mock_unf_domain.py  mock_unf_mesh.py  onthefly_helpers.py  test.py  test_coefficients.py  test_complex_packing.py  test_dg_poisson.py  test_dirichlet_bcs.py  test_div_thm.py  test_ds_bdry_unf_reconstruct.py  test_dsu_reconstruct.py  test_elements.py  test_empty_domain.py  test_higher_derivatives.py  test_impl.py  test_impl_assembly.py  test_impl_mixed_element.py  test_impl_nonlinear.py  test_impl_poisson.py  test_jit_cache.py  test_linear_problem.py  test_matrix.py  test_mixed_dim.py  test_nonlinear_problem.py  test_onthefly_jit_link.py  test_onthefly_parallel_build.py  test_onthefly_shim.py  test_plot.py  test_scalar.py  test_spatial_coordinate.py  test_subdomain_tags.py  test_unfitted_boundary.py  test_vector.py  test_volume_primitives.py  utils.py
python/test/dolfinx/: mock_quad_generator.py  test_internal_boundary.py  test_matrix.py  test_unfitted_boundary.py
(+2390 files in other folders)
